# mvml-assignment

./: .gitignore  COMMENTARY.md  Dockerfile  README.md  pyproject.toml  setup.sh
notebooks/: sandbox.ipynb
src/: data_cleaner.py  get_metrics.py  inference.py  training.py
tests/: test_mvml_assignment.py
utils/: data_loader.py
