[tool.poetry]
name = "mvml-assignment"
version = "0.1.0"
description = ""
authors = ["nerdai <andrei@nerdai.io>"]
readme = "README.md"
packages = [{include = "mvml_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^2.16.2"
pytest = "^7.2.1"
sklearn = "^0.0.post1"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
